<resources>
    <string name="app_name">Palett</string>
    <string name="palett">Palett</string>
    <string name="brandicon">BrandIcon</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ejemplo_ejemplo_com">ejemplo@ejemplo.com</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="passhint">**********</string>
    <string name="entrar">Entrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campana">Campana</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="ordenes">Ordenes</string>
    <string name="productos">Productos</string>
    <string name="materiales">Materiales</string>
    <string name="menu_principal">Menu Principal</string>
</resources>
